deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejsapp
  template:
    metadata:
      labels:
        app: nodejsapp
    spec:
      containers:
        - name: nodejsapp
          image: localhost:5000/nodejsapp:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
