service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp-service
spec:
  type: NodePort
  selector:
    app: nodejsapp
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
