ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodejsapp-ingress
spec:
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /nodejsapp
            backend:
              serviceName: nodejsapp-service
              servicePort: 3000
